# web

./: .gitignore  CMakeLists.txt  Makefile  TODO  main.cpp
cgi-bin/: getQuery.py  script.py  script_bash.sh
configuration_files/: all.conf  basic.conf  def.conf  multiple-port-error.conf  sample.conf  test  verysample.conf
configuration_files/db-config/: data.json
errors/: 400.html  401.html  402.html  403.html  404.html  405.html  406.html  407.html  408.html  409.html  410.html  411.html  412.html  413.html  414.html  415.html  416.html  417.html  418.html  421.html  422.html  423.html  424.html  425.html  426.html  428.html  429.html  431.html  451.html  500.html  501.html  502.html  503.html  504.html  505.html  506.html  507.html  508.html  510.html  511.html
include/: Cgi.hpp  Client.hpp  ConfigBlock.hpp  ConfigParser.hpp  ConfigParserOld.hpp  HashTable.hpp  Location.hpp  Request.hpp  Response.hpp  Server.hpp  Socket.hpp  StateMachine.hpp  Webserver.hpp  include.h
src/: Cgi.cpp  Client.cpp  ConfigBlock.cpp  ConfigParser.cpp  ConfigParserOld.cpp  Location.cpp  Request.cpp  Response.cpp  Server.cpp  Socket.cpp  Webserver.cpp  main.cpp  utility.cpp
www/: index.html  jacksite.html
www/upload/: temp.json
